fixed wrongly displayed download button in album view on mobile;

--- a/src/components/views/album-view.sass
+++ b/src/components/views/album-view.sass
@@ -58,6 +58,9 @@
         .icon
           margin-right: 1em
 
+        .text
+          flex: 1
+
     .musicWrapper
       display: flex
       flex-direction: column
